--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <h3>
             Name :
         </h3>
+       <input class="enter-name" type="text" name="enter-name" id="">
 
     </div>
 
