--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,24 +8,69 @@
     <title>Greetings</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
-    <div class="greet-div-top">
+    <div class="greet-header">
         <h1 class="head">
-            Greetings 
+            Greetings
         </h1>
 
     </div>
 
     <div class="greet-div-top">
-        <h3>
-            Name :
-        </h3>
-       <input class="enter-name" type="text" name="enter-name" id="">
+        <span class="span-name">
+            <h2>
+                Name:
+            </h2>
+
+        </span>
+        <input class="enter-name-field" type="text" name="enter-name" id="">
+
+        <span>
+            <h1 class="counter_div">
+                0
+            </h1>
+        </span>
+
+    </div>
+
+    <div class="radio-greet-btn">
+        <label class="japanese">
+            <input type="radio" name="rdio" value="japanese"  class="rdio" checked="">
+            <span>Japanese</span>
+        </label>
+
+        <label class="venda">
+            <input type="radio" name="rdio" id="" value="venda" class="rdio">
+            <span>
+                Venda
+            </span>
+        </label>
+
+        <label class="latin">
+            <input type="radio" name="rdio" id="" value="latin" class="rdio">
+            <span>
+                Latin
+            </span>
+        </label>
+        <div class="greetCtrl">
+            <button class="greetBtn">
+                Greet me
+            </button>
+        </div>
+
+
+    </div>
+
+    <div class="output_div">
 
     </div>
 
 
-    
+
+
 </body>
 <script src="./js/javascript.js"></script>
+<script src="./js/greet-factory-function.js"></script>
+
 </html>
