--- a/index.html
+++ b/index.html
@@ -18,54 +18,59 @@
     </div>
 
     <div class="greet-div-top">
-        <span class="span-name">
-            <h2>
-                Name:
-            </h2>
+        <div class="center">
+            <span class="span-name">
+                <h2>
+                    Name:
+                </h2>
 
-        </span>
-        <input class="enter-name-field" type="text" name="enter-name" id="">
+            </span>
+            <input class="enter-name-field" type="text" name="enter-name" id="">
 
-        <span>
-            <h1 class="counter_div">
-                0
-            </h1>
-        </span>
-
+            <span>
+                <h1 class="counter_div">
+                    0
+                </h1>
+            </span>
+        </div>
     </div>
 
     <div class="radio-greet-btn">
-        <label class="japanese">
-            <input type="radio" name="rdio" value="japanese"  class="rdio" checked="">
-            <span>Japanese</span>
-        </label>
+        <div class="center">
+            <label class="japanese">
+                <input type="radio" name="rdio" value="japanese" class="rdio" checked="">
+                <span>Japanese</span>
+            </label>
 
-        <label class="venda">
-            <input type="radio" name="rdio" id="" value="venda" class="rdio">
-            <span>
-                Venda
-            </span>
-        </label>
+            <label class="venda">
+                <input type="radio" name="rdio" id="" value="venda" class="rdio">
+                <span>
+                    Venda
+                </span>
+            </label>
 
-        <label class="latin">
-            <input type="radio" name="rdio" id="" value="latin" class="rdio">
-            <span>
-                Latin
-            </span>
-        </label>
-        <div class="greetCtrl">
-            <button class="greetBtn">
-                Greet me
-            </button>
+            <label class="latin">
+                <input type="radio" name="rdio" id="" value="latin" class="rdio">
+                <span>
+                    Latin
+                </span>
+            </label>
+
+            <div class="greetCtrl">
+                <button class="greetBtn">
+                    Greet me
+                </button>
+            </div>
+            
         </div>
 
-
     </div>
+    
+        <div class="output_div">
+            <div class="center"></div>
 
-    <div class="output_div">
-
+        </div>
     </div>
-
 
 
 
