--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
             <input class="enter-name-field" type="text" name="enter-name" id="">
 
             <span>
+                <h3>
+                    counter:
+                </h3>
                 <h1 class="counter_div">
                     0
                 </h1>
