--- a/index.html
+++ b/index.html
@@ -93,11 +93,12 @@
     </div>
 
 
-
-
+    <script src="./js/greet-factory-function.js"></script>
+    <script src="./js/javascript.js"></script>
+    <script src="./greet-test/greet.test.js"></script>
+    
 
 </body>
-<script src="./js/javascript.js"></script>
-<script src="./js/greet-factory-function.js"></script>
+
 
 </html>
