--- a/index.html
+++ b/index.html
@@ -80,6 +80,12 @@
                             reset me
                         </button>
                     </div>
+
+                    <div class="listNames">
+                        <button class="listBtn">
+                            Show all
+                        </button>
+                    </div>
                 </div>
 
             </div>
