--- a/greet-test/index.html
+++ b/greet-test/index.html
@@ -15,15 +15,12 @@
         mocha.setup('bdd');
         var assert = chai.assert;
     </script>
-    
-    
+<script src="../js/greet-factory-function.js"></script>
+<script src="./greet.test.js"></script>
     <script>
         mocha.checkLeaks();
         mocha.run();
     </script>
-    <script src="./greet.test.js" charset="utf-8"></script>
-    <script src="../js/greet-factory-function.js"></script>
 </body>
 
 </html>
-
