--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
             </span>
             <input class="enter-name-field" type="text" name="enter-name" id="" placeholder="Enter your name">
 
-
+            <div class="counter_lbl">
+                <span class="counter_label">
+                    <h4>
+                        counter:
+                    </h4>
+                    <h4 class="counter_div">
+                        0
+                    </h4>
+                </span>
+    
+            </div>
         </div>
-        <div class="counter_lbl">
-            <span class="counter_label">
-                <h4>
-                    counter:
-                </h4>
-                <h4 class="counter_div">
-                    0
-                </h4>
-            </span>
-
-        </div>
+       
 
 
 
@@ -77,7 +77,7 @@
 
                     <div class="resetBtn">
                         <button class="reset">
-                            reset me
+                            Reset me
                         </button>
                     </div>
 
