--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
     <script src="./js/greet-factory-function.js"></script>
     <script src="./js/javascript.js"></script>
     <script src="./greet-test/greet.test.js"></script>
+    <div></div>
     
 
 </body>
